--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,9 @@ common-ext-css:
 common-googlefonts:
   - "Lora:400,700,400italic,700italic"
   - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+  - "DM+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800"
+  - "Ubuntu:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800"
+  - "Fjord+One:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800"
 common-js:
   - "/js/jquery-1.11.2.min.js"
   - "/js/bootstrap.min.js"
